05/23/09 (Olaf)
Bug fixes in the SemWebClLib: eliminated two concurrency issues

05/10/09 (Olaf)
Bug fix in the SemWebClLib: eliminated a memory leak in the TimeoutThread of FindQuery

05/08/09 (Olaf)
First commit of a new implementation for BGP query evaluation that can be used for RDF graph implementations which use identifiers for RDF nodes

05/08/09 (Olaf)
Bug fix in the SemWebClLib: eliminated a concurrency issue in TaskQueueBase

05/07/09 (Olaf)
Minor performance improvement - implemented a custom determination of the size of a SWClGraphMem

04/25/09 (Olaf)
Finished the SemWebClLib-specific Graph implementation which improves performance of query executions. For details see:
  http://apps.sourceforge.net/wordpress/squin/2009/04/25/identified-a-proper-index-size-for-the-new-swcllib-storage-solution/

04/13/09 (Olaf)
Fixed bug in TriG writer - some namespace prefixes were used without being defined

02/08/09 (Olaf)
First commit of a SemWebClLib-specific Graph implementation which improves performance of query executions. For details see:
  http://apps.sourceforge.net/wordpress/squin/2009/03/28/new-storage-solution-for-the-semantic-web-client-library/

02/23/09 (Olaf)
Bug fix in the SemWebClLib: pending deref tasks for find queries are identified by the corresponding URIs; in case of hash-URIs: mismatch between requested and dereferenced URI caused blocking until timeouts; now: cut off hash part identifying URIs; huge performance gain!

Release 0.9
-----------

02/12/09 (Jennifer)
We neglected to update from wstx-asl-2.8.jar to wstx-asl-3.0.0.jar when we upgraded to ARQ 2.4 for release 0.8 of ng4j.  Updated the library.
Generalize the sizes of fields used for databases which allow variable-length varchars.  The field size is set in DbCompatibility and used (in classes which support it) when tables are initially created.

02/10/09 (Jennifer)
Fixed NamedGraphModel code so that when it uses a TriGWriter, the writer includes the model's namespace prefix map.